# ocaml-geojson

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  dune  dune-project  extension.opam  geojson.opam  geojsone.opam  geojsonm.opam  index.html
.github/workflows/: build.yml  ci.yml
bench/: bench.ml  dune
bench/effects/: bench.ml  dune
bench/geojson/: README.md  bench.ml  dune
bench/geojsone/: README.md  bench.ml  dune
bench/js/: dune  index.html  index.ml  json.js
exampl/: dune  main.ml
geojson/: index.html
geojson/Geojson/: index.html
geojson/Geojson/Make/: index.html
geojson/Geojson/Make/Feature/: index.html
geojson/Geojson/Make/Feature/Collection/: index.html
geojson/Geojson/Make/Geometry/: index.html
geojson/Geojson/Make/Geometry/LineString/: index.html
geojson/Geojson/Make/Geometry/MultiLineString/: index.html
geojson/Geojson/Make/Geometry/MultiPoint/: index.html
geojson/Geojson/Make/Geometry/MultiPolygon/: index.html
geojson/Geojson/Make/Geometry/Point/: index.html
geojson/Geojson/Make/Geometry/Polygon/: index.html
geojson/Geojson/Make/Geometry/Position/: index.html
geojson/Geojson/Make/Random/: index.html
geojson/Geojson/Make/argument-1-J/: index.html
geojson/Geojson/module-type-S/: index.html
geojson/Geojson/module-type-S/Feature/: index.html
geojson/Geojson/module-type-S/Feature/Collection/: index.html
geojson/Geojson/module-type-S/Geometry/: index.html
geojson/Geojson/module-type-S/Geometry/LineString/: index.html
geojson/Geojson/module-type-S/Geometry/MultiLineString/: index.html
geojson/Geojson/module-type-S/Geometry/MultiPoint/: index.html
geojson/Geojson/module-type-S/Geometry/MultiPolygon/: index.html
geojson/Geojson/module-type-S/Geometry/Point/: index.html
geojson/Geojson/module-type-S/Geometry/Polygon/: index.html
geojson/Geojson/module-type-S/Geometry/Position/: index.html
geojson/Geojson/module-type-S/Random/: index.html
geojson/Geojson__/: index.html
geojson/Geojson__Geojson_intf/: index.html
geojsonm/: index.html
geojsonm/Geojsonm/: index.html
geojsonm/Geojsonm/Err/: index.html
geojsonm/Geojsonm/G/: index.html
geojsonm/Geojsonm/G/Feature/: index.html
geojsonm/Geojsonm/G/Feature/Collection/: index.html
geojsonm/Geojsonm/G/Geometry/: index.html
geojsonm/Geojsonm/G/Geometry/LineString/: index.html
geojsonm/Geojsonm/G/Geometry/MultiLineString/: index.html
geojsonm/Geojsonm/G/Geometry/MultiPoint/: index.html
geojsonm/Geojsonm/G/Geometry/MultiPolygon/: index.html
geojsonm/Geojsonm/G/Geometry/Point/: index.html
geojsonm/Geojsonm/G/Geometry/Polygon/: index.html
geojsonm/Geojsonm/G/Geometry/Position/: index.html
geojsonm/Geojsonm/G/Random/: index.html
src/extension/: dune  extension.ml
src/geojson/: dune  geojson.ml  geojson.mli  geojson_intf.ml  index.mld  optics.ml  s.ml
src/geojsone/: dune  geojsone.ml  geojsone.mli
src/geojsone/eio/: dune  geojsone_eio.ml  geojsone_eio.mli
src/geojsonm/: dune  geojsonm.ml  geojsonm.mli  index.mld  types.ml
src/geojsonm/jsone/: jsone.ml  jsone.mli  jsonm.ml  uutfe.ml  uutfe.mli
src/geojsonm/lib/: dune  geojsonm.ml  geojsonm.mli
test/: prelude.txt
test/geojson/: dune  test.ml
test/geojson/files/valid/: 3d_featurecollection.json  feature.json  featurecollection.json  geo_with_bbox.json  linestring.json  multi_polygon.json  multilinestring.json  multipoint.json  point.json  polygon.json  prop1.json  prop2.json
test/geojsonm/expect/: dune  test.expected  test.ml  testIters.ml  test_iters.expected  test_iters.ml
test/geojsonm/expect/input/: simple.geojson
test2/: main.ml
