(executable
 (name bench)
 (libraries eio eio_main geojsonm))

(rule
 (alias benche)
 (mode promote-until-clean)
 (targets out.geojson)
 (deps ./bench.exe ../../test/geojsonm/expect/input/simple.geojson)
 (action
  (progn
   (copy ../../test/geojsonm/expect/input/simple.geojson ./simple.geojson)
   (run ./bench.exe))))
